--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <nav>
       <ul>
         <!-- <li>JJ Shop</li> -->
-        <li>Home</li>
-        <li>About</li>
-        <li>Content</li>
-        <li>Help</li>
-        <li>Feedback</li>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Content</a></li>
+        <li><a href="">Help</a></li>
+        <li><a href="">Feedback</a></li>
       </ul>
     </nav>
   </header>
