--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <li>three</li>
     <li>four</li>
     <li>five</li>
+    <li>six</li>
+    <li>seven</li>
+    <li>eight</li>
+    <li>nine</li>
+    <li>ten</li>
   </ol>
 </body>
 </html>
