I change my BOD in index.html

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
   </header>
   <h1>This is creating for squash command</h1>
   <ol class="counts">
-    <li>one</li>
-    <li>two</li>
-    <li>three</li>
-    <li>four</li>
-    <li>five</li>
-    <li>six</li>
-    <li>ten</li>
-  </ol>
+    <li>Zero</li>
+    <li>Nine</li>
+    <li>Zero</li>
+    <li>One</li>
+    <li>Two</li>
+    <li>Zero</li>
+    <li>Zero</li>
+    <li>Four</li>
+ </ol>
 </body>
 </html>
