fix: add brother dob and some spelling mistakes in index.html

--- a/index.html
+++ b/index.html
@@ -30,5 +30,16 @@
     <li>Zero</li>
     <li>Four</li>
  </ol>
+ <h1>My brother DOB</h1>
+ <ol class="counts">
+  <li>Zero</li>
+  <li>Four</li>
+  <li>One</li>
+  <li>One</li>
+  <li>One</li>
+  <li>Nine</li>
+  <li>Nine</li>
+  <li>Nine</li>
+</ol>
 </body>
 </html>
